# almost-a-cms

./: .almostacms.json  .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  index.html  pyproject.toml  template_index.html  test_system.py
almostacms-templates/almost-a-simple-landing/: .almostacms.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
almostacms-templates/almost-a-simple-landing/admin/: index.html
almostacms-templates/almost-a-simple-landing/public/: .almostacms.json
almostacms-templates/almost-a-simple-landing/src/: App.tsx  index.css  types.ts
almostacms-templates/almost-a-tree/: .almostacms.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
almostacms-templates/almost-a-tree/admin/: .almostacms-admin  index.html
almostacms-templates/almost-a-tree/src/: App.tsx  types.ts
cloudflare-oauth-proxy/: README.md  package.json  wrangler.toml
cloudflare-oauth-proxy/src/: index.ts
cloudflare-worker/: github-proxy.js
config/: __init__.py  settings.py
data/: sidebar.json
docs/: ADMIN_BUNDLING_STRATEGY.md  ALMOSTACMS_CONFIG.md  ARCHITECTURE.md  BUSINESS_MODEL.md  CREATING_TEMPLATES.md  DEVICE_FLOW_SETUP.md  LANDING_PAGE_SPEC.md  OAUTH_PRODUCTION.md  PRODUCT_VISION.md  PROJECT_DETECTION.md
docs/temp/: PROJECT_DETECTION_IMPLEMENTATION.md
oauth-proxy/: .env.example  DEPRECATED.md  README.md  server.js
react-cms/: README.md  package.json  vite.config.ts
react-cms/public/data/: hero.json
react-cms/src/: App.tsx  vite-env.d.ts
react-cms/src/components/: DynamicFormEditor.tsx  EmojiPicker.tsx  IconBrowser.tsx  ImageUpload.tsx  Layout.tsx  SectionEditorLoader.tsx  SocialMediaPicker.tsx
react-cms/src/config/: constants.ts  github.ts
react-cms/src/contexts/: AuthContext.tsx
react-cms/src/hooks/: useApi.ts  useLandingPageData.ts  useRepo.ts  useSections.ts
react-cms/src/pages/: Dashboard.tsx  DashboardWrapper.tsx
react-cms/src/sections/: registry.ts
react-cms/src/services/: device-flow-auth.ts  github-api.ts  repo-context.ts
react-cms/src/utils/: tokenStorage.ts
scripts/: prepare-admin-bundle.sh
src/almostacms/: __init__.py  cli.py
src/almostacms/application/: __init__.py
src/almostacms/domain/: __init__.py
src/almostacms/infrastructure/: __init__.py
src/almostacms/presentation/: __init__.py
template-dev-kit/: .almostacms.json.template  .gitignore.template  LICENSE  README.md
template-dev-kit/.github/workflows/: deploy-docs.yml  deploy-root.yml
template-dev-kit/admin/assets/: index-0a36ed6b.js
template-dev-kit/boilerplate/: index.html
template-dev-kit/boilerplate/css/: base.css  reset.css
template-dev-kit/boilerplate/js/: data-loader.js  main.js
template-dev-kit/data/: about.json.example  blog.json.example  contact.json.example  navbar.json.example  projects.json.example  settings.json.example
template-dev-kit/docs/: BEST_PRACTICES.md  DATA_SCHEMAS.md  DEPLOYMENT.md  QUICKSTART.md
template-dev-kit/scripts/: setup-template.sh  validate-template.sh
template-dev-reactjs-kit/: README.md
template-dev-reactjs-kit/boilerplate/: .almostacms.json  index.html  package.json  vite.config.ts
template-dev-reactjs-kit/docs/: ARCHITECTURE.md
templates/admin/: base.html  dashboard.html  edit_content.html  index.html
tests/: test_content_api.py
(+123 files in other folders)
